--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,8 @@ spring:
   application:
     name: secured-students-application
   datasource:
-    url: jdbc:postgresql://localhost:5432/journeys
+#    url: jdbc:postgresql://localhost:5432/journeys
+    url: jdbc:postgresql://db:5432/journeys
     username: postgres
     password: 19072004m
     driver-class-name: org.postgresql.Driver
