--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     container_name: db
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 19072004m
-      POSTGRES_DB: journeys
+      POSTGRES_USER: ${USER}
+      POSTGRES_PASSWORD: ${PASSWORD}
+      POSTGRES_DB: ${NAME}
     ports:
       - '5432:5432'
     networks:
@@ -19,9 +19,9 @@ services:
     ports:
       - "8080:8080"
     environment:
-      DB_USER: postgres
-      DB_PASSWORD: 19072004m
-      DB_NAME: journeys
+      DB_USER: ${USER}
+      DB_PASSWORD: ${PASSWORD}
+      DB_NAME: ${NAME}
       DB_HOST: db:5432
     depends_on:
       - db
