--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,15 +3,13 @@ spring:
     name: secured-students-application
   datasource:
 #    url: jdbc:postgresql://localhost:5432/journeys
-    url: jdbc:postgresql://db:5432/journeys
-    username: postgres
-    password: 19072004m
+    url: jdbc:postgresql://db:5432/${DB_NAME}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
-
   jpa:
     hibernate:
       ddl-auto: update
-      dialect: org.hibernate.dialect.PostgreSQLDialect  # Добавление диалекта
     show-sql: true
     open-in-view: false
 app:
