--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,7 @@ spring:
   application:
     name: secured-students-application
   datasource:
-#    url: jdbc:postgresql://localhost:5432/journeys
-    url: jdbc:postgresql://db:5432/${DB_NAME}
+    url: jdbc:postgresql://localhost:5432/${DB_NAME}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
