--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 HELP.md
-!target/
+target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
@@ -36,11 +36,3 @@ build/
 /.mvn/
 /logs/
 /.env
-/target/classes/
-/target/generated-sources/
-/target/generated-test-sources/
-/target/maven-archiver/
-/target/maven-status/
-/target/site/
-/target/surefire-reports/
-/target/test-classes/
